--- a/蘵感ZanGan上傳/style.css
+++ b/蘵感ZanGan上傳/style.css
@@ -858,7 +858,7 @@ hr {
 }
 
 /* 內容大區塊 */
-#media .main{
+#media .main {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -867,11 +867,10 @@ hr {
 }
 
 /* 直欄 */
-#media .main ul{
-}
+#media .main ul {}
 
 /* 橫列 */
-#media .main li{
+#media .main li {
     padding: 0 5px;
     margin-bottom: 60px;
 }
@@ -925,4 +924,100 @@ hr {
 #footer h3 {
     color: #E7E4DB;
 
+}
+
+/*----------------- signup課程報名----------------- */
+
+/* signup共用區 */
+/* 字的顏色 */
+#signup h1,
+#signup h2,
+#signup h3 {
+    color: #3C4935;
+}
+
+#signup h4 {
+    color: #797474;
+    font-size: 14px;
+}
+
+/* signup課程報名 */
+#signup {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    /* border: solid 5px salmon; */
+}
+
+/* 左半區塊 */
+#signup .dropbox {
+    /* border: solid 5px salmon; */
+}
+
+/* 上面導覽區 */
+#signup nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(240, 240, 240, 0.3);
+    width: 80%;
+    height: 20vh;
+    margin: 20px;
+    /* border: solid 5px salmon; */
+}
+
+/* 小標題區 */
+#signup .item {
+    display: flex;
+    text-align: center;
+    margin: 90px 30px 60px 60px;
+}
+
+/* 課程或活動 :hover效果 */
+#signup .box1 h4:hover,
+#signup .box1 hr:hover {
+    color: #3C4935;
+    border-color: #3C4935;
+    background-color: #fff;
+    /* border: solid 5px salmon; */
+}
+
+/* 課程或活動/工作坊字體顏色+hr顏色 */
+#signup span h4,
+#signup span hr {
+    color: #DACFB8;
+    border-color: #DACFB8;
+    width: 200px;
+}
+
+/* 下拉選單 */
+#ccourse,
+#name {
+    display: block;
+    width: 400px;
+    height: 50px;
+    margin-bottom: 30px;
+    border-color: #D8D8D8;
+    border-radius: 5px;
+    color: #9F9F9F;
+    border-color: #D8D8D8;
+    color: #9F9F9F;
+    margin-left: 60px;
+
+}
+
+/* 加入預約清單 */
+#signup .list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+/*  圈圈往右箭頭 */
+#signup .list img {
+    padding-left: 10px;
+    margin-right:30px ;
 }
